--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <title>AlltRaf</title>
+  <title>Wildline Fly Fishing</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
@@ -216,6 +216,84 @@
 
                 </div>
 
+                <div class="section-3">
+                  
+                  <h1>Stay in a private<br> lodge by the river</h1>
+
+                  <div class="gallery">
+
+
+
+                      <div class="gallery-row">
+
+                          <div class ="gallery-1">
+                            <a href="img/g2-1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" src="img/g2-1.jpg">
+                            </a>
+                            <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" src="img/g2-2.jpg">
+                            </a>
+                          </div>
+                          <div class="gallery-2">
+
+                            <div class = "gallery-2-top">
+                              <a href="img/g1-3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" src="img/g2-3.jpg">
+                              </a>
+                              <a href="img/g1-4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" src="img/g2-4.jpg">
+                              </a>
+
+                            </div>
+                            <div class="gallery-2-bottom">
+                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
+                              </a>
+
+                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                                <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-6.jpg">
+                              </a>
+                            </div>
+                          </div>
+
+                      </div>
+
+                      <div class="gallery-3">
+                        <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                          <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
+                        </a>
+                      </div>
+
+                    </div>
+
+                    <span>INCLUDED IN YOUR LODGE</span>
+
+                    <div class="lodge-included-container">
+
+                        <div class="lodge-included">
+                            <ul>
+                              <li>Completely private hosting</li>
+                              <li>Breakfast, lunch & dinner</li>
+                              <li>Hot tub with scenic views</li>
+                              <li>Pick-up & drop-off</li>
+                            </ul>
+                        </div>
+
+
+                        <div class="lodge-included">
+                            <ul>
+                              <li>4 bedrooms</li>
+                              <li>2 double beds</li>
+                              <li>4 single beds</li>
+                              <li>2 bathrooms 2 showers</li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+
+                </div>
+
          </div>
 
           <div class="sticky-cta">
@@ -421,7 +499,7 @@
 
       // Add event listener for menu toggle
       menuBtn.addEventListener('change', handleScroll);
-    </script>>
+    </script>
 
     <!-- GLightbox Library -->
     <script src="glightbox.min.js"></script>
