--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     </div>
 
-    <button id="openModal" class ="desktop-show">Reserve</button>
+    <button id="openModal" class ="desktop-show-btn">Reserve</button>
 
 
 
@@ -145,8 +145,8 @@
 
                 <div class="section-2">
                     <h2>Fish every species Icelandic fly fishing has to offer</h2>
-                    <span>FULLY PRIVATE SEARUN & LOCAL RIVERS AND WATERS</span>
-
+                    <span class = "desktop-show">FULLY PRIVATE SEARUN & LOCAL RIVERS AND WATERS</span>
+                    <span class ="mobile-show">FULLY PRIVATE SEARUN &<br> LOCAL RIVERS AND WATERS</span>
                        <div class="fish-grid">
                          <!-- Card 1: Atlantic Salmon -->
                          <div class="fish-card">
