--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                          <!-- Card 5: Arctic Char -->
                          <div class="fish-card">
-                           <img src="img/Fish-Grid01.jpg" alt="Arctic Char">
+                           <img class ="fish-card-last" src="img/Fish-Grid01.jpg" alt="Arctic Char">
                            <div class="fish-grid-content">
                              <h3>Arctic Char</h3>
                              <ul>
