--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                          <!-- Card 4: Brown Trout -->
                          <div class="fish-card">
-                           <img src="img/Fish-Grid04.jpg" alt="Brown Trout">
+                           <img class = "fish-card-2nd" src="img/Fish-Grid04.jpg" alt="Brown Trout">
                            <div class="fish-grid-content">
                              <h3>Brown Trout</h3>
                              <ul>
