--- a/index.html
+++ b/index.html
@@ -293,6 +293,41 @@
 
 
                 </div>
+                
+
+                <div class="section-4">
+
+                  <h2>Meet your guide</h2>
+                  <h3>Magnús is born and raised by<br> this river and is here to make<br> the most out of your fly<br> fishing adventure.</h3>
+
+                  <span>INCLUDED IN YOUR GUIDE</span>
+
+                  <div class="section-4-bottom">
+
+                      <div class="section-4-left">
+
+
+                          <div class="lodge-included">
+                              <ul>
+                                <li>Pick-up & drop-off</li>
+                                <li>Rods & waders</li>
+                                <li>Flies</li>
+                                <li>Leaders</li>
+                              </ul>
+                          </div>
+                      </div>
+
+                      <div class="section-4-right">
+
+                        <img src="img/guide-1.jpg">
+                        <img src="img/guide-2.jpg">
+                        
+                      </div>
+
+                    </div>
+
+
+                </div>
 
          </div>
 
