--- a/index.html
+++ b/index.html
@@ -359,6 +359,63 @@
 
                     </div>
 
+                    <div class="section-6">
+                      
+                      <h3>Questions?<br>Answers.</h3>
+
+                      <div class="faq-section">
+                        <div class="faq-grid">
+                          <a href="#faq1" class="faq-item glightbox" data-gallery="faq" data-type="inline">
+                            Are flights included? <span>  <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
+  </svg></span>
+                          </a>
+                          <a href="#faq2" class="faq-item glightbox" data-gallery="faq" data-type="inline">
+                            What skill level do I need to have? <span> <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
+  </svg></span>
+                          </a>
+                          <a href="#faq3" class="faq-item glightbox" data-gallery="faq" data-type="inline">
+                            What do I need to bring? <span>  <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
+  </svg></span>
+                          </a>
+                          <a href="#faq4" class="faq-item glightbox" data-gallery="faq" data-type="inline">
+                            Can I customize our tour? <span>  <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
+  </svg></span>
+                          </a>
+                        </div>
+
+                        <!-- Lightbox Content -->
+                        <div id="faq1" class="faq-lightbox-content" style="display: none;">
+                          <h2>Are flights included?</h2>
+                          <p>Flights are not included in our prices. We recommend booking your flights independently to ensure the best fit. That said, we’re here to help! If you need assistance with flight arrangements, we’re happy to provide guidance and support.</p>
+                        </div>
+                        <div id="faq2" class="faq-lightbox-content" style="display: none;">
+                          <p>You should have a basic fitness level to fully enjoy the activities on this tour.</p>
+                        </div>
+                        <div id="faq3" class="faq-lightbox-content" style="display: none;">
+                          <p>Bring comfortable clothing, sturdy shoes, and any personal essentials like medications or chargers.</p>
+                        </div>
+                        <div id="faq4" class="faq-lightbox-content" style="display: none;">
+                          <p>Yes, we offer customization options for private groups. Please contact us for details.</p>
+                        </div>
+                      </div>
+
+                      <script type="text/javascript">
+                        
+                        //FAQ Lightbox
+
+                          document.addEventListener('DOMContentLoaded', function () {
+                            const faqLightbox = GLightbox({
+                              selector: '.glightbox', // Target your FAQ links
+                            });
+
+                      </script>
+
+                    </div>
+
                 </div>
 
 
