--- a/thank-you.html
+++ b/thank-you.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="hero-left-back">
-          <link rel="preload" href="img/hero-back.png" as="image">
+          <img src="img/hero-back.webp" loading="eager">
         </div>
       </div>
 
