--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                         <span>INCLUDED IN YOUR GUIDE</span>
 
-                        
+
                         <div class="lodge-included">
                             <ul>
                               <li>Pick-up & drop-off</li>
@@ -366,6 +366,8 @@
                             <div class="card">Available at any time, and from any place</div>
 
                           </div>
+
+                          <a href="https://maps.app.goo.gl/gR1kgAo78GbnTxC98" target="Blank" class ="mobile-show">View on map</a>
 
 
                     </div>
