--- a/index.html
+++ b/index.html
@@ -499,6 +499,34 @@
          </div>
 
 
+         <div class="section-7">
+
+          <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+           <div class="sec-7-right">
+            <span>AVAILABLE JUNE – SEPTEMBER 2025</span>
+             <h2>Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
+             <h3>Full private lodging and river<br> system from $1490 per person</h3>
+
+             <div class="button-container">
+               <button class = "btn-bottom" id="openModal">Book your spot now</button>
+               <button class="secondary">Contact us</button>
+             </div>
+
+             <p></p>
+
+             <img src="img/hero-back.webp" loading="eager">
+           </div>
+
+
+         </div>
+
+         <footer>
+           
+
+
+         </footer>
+
+
           <!-- Submit form -->
               <div id="modal" class="modal">
                 <div class="modal-content">
