--- a/index.html
+++ b/index.html
@@ -507,9 +507,14 @@
              <h2>Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
              <h3>Full private lodging and river<br> system from $1490 per person</h3>
 
-             <div class="button-container">
+             <div class="button-container desktop-show">
                <button class = "btn-bottom" id="openModal">Book your spot now</button>
                <button class="secondary">Contact us</button>
+             </div>
+
+             <div class="button-container mobile-show">
+               <button id="openModal">Book your spot</button>
+               <button class="secondary">Contact</button>
              </div>
 
              <p></p>
