--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
               
               <ul>
                 <li>contact@wildline.fishing</li>
-                <li>+354 694 5159</li>
+                <li><span>+354 694 5159</span></li>
                 <li>Hafnarhella 12, 221 Hafnarfjörður</li>
               </ul>
 
