--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Add JS -->
   <script src="flatpickr.js"></script>
 
+  <meta name="format-detection" content="telephone=no">
   <meta name="description" content="AlltRaf Rafverktakar">
   <meta property="og:image" content=""/>
   <meta name="keywords" content="Rafverktakar, Rafvirki">
@@ -409,11 +410,7 @@
 
                       <div class="faq-section">
                         <div class="faq-grid">
-                          <a class="openModal-3 faq-item" href="#modal3">
-                            Are flights included? <span>  <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
-                              </svg></span>
-                          </a>
+
                           <a class="openModal-3 faq-item" href="#modal3">
                             What skill level do I need to have? <span> <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
@@ -429,6 +426,11 @@
                               <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
                             </svg></span>
                             </a>
+                            <a class="openModal-3 faq-item" href="#modal3">
+                              Are flights included? <span>  <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                  <path opacity="0.5" d="M2.60156 9.50293C2.60156 9.1748 2.71615 8.89616 2.94531 8.66699C3.17969 8.43262 3.46094 8.31543 3.78906 8.31543H8.125V3.9873C8.125 3.65918 8.23958 3.38053 8.46875 3.15137C8.69792 2.91699 8.97656 2.7998 9.30469 2.7998C9.63281 2.7998 9.91146 2.91699 10.1406 3.15137C10.375 3.38053 10.4922 3.65918 10.4922 3.9873V8.31543H14.8281C15.151 8.31543 15.4271 8.43262 15.6562 8.66699C15.8906 8.89616 16.0078 9.1748 16.0078 9.50293C16.0078 9.83105 15.8906 10.1123 15.6562 10.3467C15.4271 10.5758 15.151 10.6904 14.8281 10.6904H10.4922V15.0264C10.4922 15.3493 10.375 15.6253 10.1406 15.8545C9.91146 16.0889 9.63281 16.2061 9.30469 16.2061C8.97656 16.2061 8.69792 16.0889 8.46875 15.8545C8.23958 15.6253 8.125 15.3493 8.125 15.0264V10.6904H3.78906C3.46094 10.6904 3.17969 10.5758 2.94531 10.3467C2.71615 10.1123 2.60156 9.83105 2.60156 9.50293Z" fill="#1D1F1C"/>
+                                </svg></span>
+                            </a>
                         </div>
 
                         <!-- FAQ Content -->
@@ -443,15 +445,7 @@
                                   <img class="form-cover" src="img/form-cover.jpg">
 
                                   <div class="form-container faq-container">
-                                    <h4>River Lýsa FAQ</h4>
-                                    
-
-                                    <div class="faq-question">
-                                      <h5>Are flights included?</h5>
-                                      <p>Flights are not included in our prices. We recommend booking your flights independently to ensure the best fit. That said, we’re here to help! If you need assistance with flight arrangements, we’re happy to provide guidance and support.</p>
-                                      <div class="line-seperator"></div>
-                                    </div>
-
+                                    <h4>River Lýsa FAQ</h4>-
 
                                     <div class="faq-question">
                                       <h5>What skill level do I need to have?</h5>
@@ -468,6 +462,12 @@
                                     <div class="faq-question">
                                       <h5>Can I customize our tour?</h5>
                                       <p>Absolutely! We work with top travel agencies in Iceland and can expand your adventure to include other fly fishing hotspots or exciting activities like highland trekking, snowmobiling, helicopter rides, or whatever else you can dream up. Let us know your vision, and we’ll make it happen!</p>
+                                      <div class="line-seperator"></div>
+                                    </div>
+
+                                    <div class="faq-question">
+                                      <h5>Are flights included?</h5>
+                                      <p>Flights are not included in our prices. We recommend booking your flights independently to ensure the best fit. That said, we’re here to help! If you need assistance with flight arrangements, we’re happy to provide guidance and support.</p>
                                     </div>
                                     
                                     </form>
