--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 
                         <!-- Submit Button -->
                         <div class="form-cta">
-                          <button type="submit">Submit enquiry</button>
+                          <button type="submit">Send Request</button>
                         </div>
                       </form>
                     </div>
