--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="author" content="AlltRaf Rafverktakar">  
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <meta name="theme-color" content="#2A2E28">
+  <link rel="preload" href="img/hero-back.webp" as="image">
 
 </head>
 
