--- a/index.html
+++ b/index.html
@@ -593,7 +593,8 @@
                               <label class="package">
                                 <input type="radio" name="package" value="1-day" required>
                                 <div class="package-content">
-                                  <span class="popular-banner">Most Popular</span>
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <!--<span class="popular-banner">Most Popular</span>-->
                                   <div class="package-left">
                                     <h3>1 day tour</h3>
                                     <ul>
@@ -609,7 +610,8 @@
                               <label class="package" data-most-popular="true">
                                 <input type="radio" name="package" value="2-day">
                                 <div class="package-content">
-                                  <span class="popular-banner">Most Popular</span>
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <!--<span class="popular-banner">Most Popular</span>-->
                                   <div class="package-left">
                                     <h3>2 day tour</h3>
                                     <ul>
@@ -629,6 +631,7 @@
                               <label class="package">
                                 <input type="radio" name="package" value="3-day">
                                 <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>3 day tour</h3>
                                     <ul>
@@ -644,6 +647,7 @@
                               <label class="package">
                                 <input type="radio" name="package" value="3-day">
                                 <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>Custom tour</h3>
                                     <ul>
